# F1Tenth

./: .gitignore  README.md
Learning/: CMakeLists.txt  README.md  config.json  package.xml
Learning/dataset_generation/: generate_dataset.py
Learning/dataset_generation/__pycache__/: generate_dataset.first_point_on_trajectory_intersecting_circle-57.py39.1.nbc  generate_dataset.first_point_on_trajectory_intersecting_circle-57.py39.nbi  generate_dataset.first_point_on_trajectory_intersecting_circle-59.py39.1.nbc  generate_dataset.first_point_on_trajectory_intersecting_circle-59.py39.nbi  generate_dataset.get_actuation-142.py39.1.nbc  generate_dataset.get_actuation-142.py39.nbi  generate_dataset.get_actuation-144.py39.1.nbc  generate_dataset.get_actuation-144.py39.nbi  generate_dataset.nearest_point_on_trajectory-22.py39.1.nbc  generate_dataset.nearest_point_on_trajectory-22.py39.nbi  generate_dataset.nearest_point_on_trajectory-24.py39.1.nbc  generate_dataset.nearest_point_on_trajectory-24.py39.nbi
Learning/legacy/: lidar_dataset.py  model_weights_0.048.pth  network.py
Learning/src/: config_loader.py  generate_dataset.py  gym_env.py  lidar_dataset.py  lidar_preprocessing.py  network.py  node.py  reinforcement_learning.py  run_on_gym.py  supervised_training.py
Learning/src/gym_maps/Austin_map/: Austin_centerline.csv  Austin_map.yaml  config_Austin_map.yaml
Learning/src/gym_maps/BrandsHatch_map/: config_BrandsHatch_map.yaml
Learning/src/gym_maps/Budapest_map/: config_Budapest_map.yaml
Learning/src/gym_maps/Catalunya_map/: config_Catalunya_map.yaml
Learning/src/gym_maps/Hockenheim_map/: config_Hockenheim_map.yaml
Learning/src/gym_maps/Melbourne_map/: config_Melbourne_map.yaml
Learning/src/gym_maps/MexicoCity_map/: config_MexicoCity_map.yaml
Learning/src/gym_maps/MoscowRaceway_map/: config_MoscowRaceway_map.yaml
(+28 files in other folders)
